--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "starterkits",
+  "name": "mesto-project-backend",
   "version": "1.0.0",
-  "description": "< Добавьте описание проекта в свободной форме >",
+  "description": "mesto project backend",
   "main": "dist/app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "build": "tsc",
     "dev": "ts-node-dev src/app.ts",
     "start": "ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "hot": "ts-node-dev index.ts"
   },
-  "author": "< Укажите здесь автора работы >",
+  "author": "nrths",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.6.3",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "celebrate": "^15.0.1",
+    "eslint": "^8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "express-winston": "^4.2.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "winston": "^3.8.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1"
   }
 }
