--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,6 @@
         "ts": "never"
       }
     ],
-    "no-underscore-dangle": [{ "allow": ["_id"]}]
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
   }
 }
