--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "nrths",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.0.0",
@@ -24,7 +27,13 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   }
 }
